// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Baba /> should pass dom data to child animation 1`] = `
Array [
  Object {
    "destination": Object {
      "element": undefined,
      "elementBoundingBox": Object {
        "location": Object {
          "left": 0,
          "top": 0,
        },
        "raw": Object {
          "rect": Object {},
          "scrollLeft": 0,
          "scrollTop": 0,
        },
        "size": Object {
          "height": 200,
          "width": 100,
        },
      },
      "focalTargetElement": undefined,
      "focalTargetElementBoundingBox": undefined,
      "render": undefined,
    },
    "origin": Object {
      "element": <div />,
      "elementBoundingBox": Object {
        "location": Object {
          "left": 0,
          "top": 0,
        },
        "raw": Object {
          "rect": Object {},
          "scrollLeft": 0,
          "scrollTop": 0,
        },
        "size": Object {
          "height": 200,
          "width": 100,
        },
      },
      "focalTargetElement": undefined,
      "focalTargetElementBoundingBox": undefined,
      "render": [Function],
    },
  },
]
`;

exports[`<Baba /> should pass dom data to child animation when using in prop 1`] = `
Array [
  Object {
    "destination": Object {
      "element": undefined,
      "elementBoundingBox": Object {
        "location": Object {
          "left": 0,
          "top": 0,
        },
        "raw": Object {
          "rect": Object {},
          "scrollLeft": 0,
          "scrollTop": 0,
        },
        "size": Object {
          "height": 200,
          "width": 100,
        },
      },
      "focalTargetElement": undefined,
      "focalTargetElementBoundingBox": undefined,
      "render": undefined,
    },
    "origin": Object {
      "element": <div />,
      "elementBoundingBox": Object {
        "location": Object {
          "left": 0,
          "top": 0,
        },
        "raw": Object {
          "rect": Object {},
          "scrollLeft": 0,
          "scrollTop": 0,
        },
        "size": Object {
          "height": 200,
          "width": 100,
        },
      },
      "focalTargetElement": undefined,
      "focalTargetElementBoundingBox": undefined,
      "render": [Function],
    },
  },
]
`;

exports[`<Baba /> should pass target dom data to child animation 1`] = `
Object {
  "location": Object {
    "left": 0,
    "top": 0,
  },
  "raw": Object {
    "rect": Object {},
    "scrollLeft": 0,
    "scrollTop": 0,
  },
  "size": Object {
    "height": 200,
    "width": 100,
  },
}
`;
